# MeganoShop

./: .env.dev  .env.prod  .env.prod.db  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  entrypoint.prod.sh  pyproject.toml  requirements.txt
app/cart/: urls.py  views.py
app/frontend/static/frontend/assets/js/: order-detail.js
app/frontend/templates/frontend/: payment.html
app/megano_shop/: asgi.py  settings.py  urls.py  wsgi.py
app/myauth/: models.py  serializers.py  views.py
app/myauth/management/commands/: create_user.py
app/myauth/migrations/: 0001_initial.py
app/orders/: models.py  serializers.py  urls.py  views.py
app/payment/: urls.py  views.py
app/products/: admin.py  common.py  models.py  serializers.py  urls.py  views.py
app/products/management/commands/: create_product.py
app/shop/: admin.py  models.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
