[tool.poetry]
name = "megano"
version = "0.1.0"
description = ""
authors = ["Belykh Igor <4340345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
virtualenv = "20.24.5"
drf-spectacular = "0.17"
django-debug-toolbar = "4.2.0"
django-filter = "23.3"
django = "4.2.3"
django-request-logging = "0.7.5"
django-rest-framework = "0.1.0"
djangorestframework = "3.14.0"
pillow = "10.0.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
psycopg2-binary = "2.9.6"
poetry = "1.6.1"
poetry-core = "1.7.0"
poetry-plugin-export = "1.5.0"
six = "1.16.0"
sqlparse = "0.4.4"
jsonschema = "4.17.3"
colorama = "0.4.6"
faker = "19.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
